--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 
 .showcase .overlay {
   background-color: rgba(0, 0, 0, 0, 5);
-  height: 400px;
+  height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,15 +27,29 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
-button {
+.button {
   border: none;
   outline: none;
-  width: 100px;
-  padding: 16px, 0px;
+  width: 150px;
+  height: 50px;
+  padding: 16px, px;
   color: #fff;
   font-size: 16px;
   letter-spacing: 1px;
   background: #603bbb;
+  cursor: pointer;
+}
+
+.button-logout {
+  border: none;
+  outline: none;
+  width: 100px;
+  height: 50px;
+  padding: px, px;
+  color: #fff;
+  font-size: 16px;
+  letter-spacing: 1px;
+  background: #060606;
   cursor: pointer;
 }
 
